making a message form

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,7 +30,8 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-10" >
-				<%= link_to "Check out 8Chan if you get bored", "https://www.8ch.net" %>
+				<%= link_to "Check out 8Chan if you get bored", "https://www.8ch.net" %><br>
+				<%= link_to "Check out 8Chan if you get bored", "users#reaction" %>
 				<%# image_tag "https://sys.8ch.net/banners.php?b=" + board_num %>
 			</div>
 		</div>
