--- a/app/views/visitors/features.html.erb
+++ b/app/views/visitors/features.html.erb
@@ -171,7 +171,8 @@
         <div class="row featurette" id="Support">
           <div class="col-md-7">
             <h2 class="featurette-heading">Support&nbsp;<span class="text-muted">and beyond</span></h2>
-            <p class="lead">It doesnt end at the grand openening. There's still more to do. Over time the functions used to create and keep the website updated are changed and updated. I'll be here to implement those changes, make changes to your pages main text as necessary and when you want the same fucntionality but a different layout or a different color scheme I'm here to do that as well. I'm here for your questions via email as well as by phone. Want a new feature or chage made. Thats what I'm here for</p>
+            <p class="lead">It doesn't end with the grand opening. There is still more to do. Over time the technology used to create and keep this and other website gets updated, changed, replaced and retired. I'll be here to help transition through those changes. Your Making sure your website remains relevant and functional for years to come. I'm here to do style changes as well. I'm here for your questions via email and phone. Want a new feature or chage made. That's what I'm here for</p>
+            <p> <a href="/contact" class="btn btn-sm btn-secondary">Contact Me</a></p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.min.js/500x500/auto" alt="Generic placeholder image">
