--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the Visitor controller here.
+// Place all the styles related to the Messages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-/*
- *= require rails_bootstrap_forms
- */
