--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,11 +1,11 @@
-</head>
-<body>
-  <main><div class="row"><div class="col-sm-5 m-auto">
-<%= bootstrap_form_with(model: message, local: true) do |f| %>
-  <%= f.text_field :username, placeholder: "Jane Doe" %><br>
-  <%= f.email_field :email, placeholder: "youremail@example.com" %><br>
-  <%= f.text_field :subject, placeholder: "Subject" %><br>
-  <%= f.text_area :body, placeholder: "Send a message..."%><br>
-  <%= f.submit "Send" %><br>
-<% end %>
-</div></div></main></body>
+<div class="d-flex d-flex-row" align=left>
+	<div class="d-flex d-flex-column">
+		<%= bootstrap_form_with(model: message, local: true) do |f| %>
+		  	<%= f.text_field :username, placeholder: "Jane Doe" , width: "100%" %>
+		  	<%= f.email_field :email, placeholder: "youremail@example.com" %>
+		  	<%= f.text_field :subject, placeholder: "Subject" %>
+		  	<%= f.text_area :body, placeholder: "Send a message...", rows: "5" %>
+		  	<%= f.submit "Send" %>
+		<% end %>
+	</div>
+</div>
