--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Message</h1>
-
-<%= render 'form', message: @message %>
-
-<%= link_to 'Home', "/" %>
+</head>
+<body align="center">
+  	<div class="container d-flex">
+	  	<div class="d-flex flex-row m-auto" align="center">
+  			<div class="d-flex flex-column">
+				<%= render 'form', message: @message %>
+			</div>
+		</div>
+	</div>
