changed the links around a little

--- a/app/views/visitors/cover.html.erb
+++ b/app/views/visitors/cover.html.erb
@@ -31,7 +31,7 @@
       <h1 class="cover-heading" text-align="center"><%= ENV['SITE_TITLE'] %></h1>
       <p class="lead mt-3 mb-5">Welcome to my Portfolio</p>
       <p class="lead mb-0">
-        <a href="/features" class="btn btn-md btn-secondary">Enjoy.</a>
+        <a href="/portfolio" class="btn btn-md btn-secondary">Enjoy.</a>
           <% if admin_user_signed_in? %>
             <a href="/admin" class="btn btn-sm btn-secondary">Admins Only</a><a href="/users" class="btn btn-sm btn-outline-secondary">Users Only</a>
 
