--- a/app/views/visitors/features.html.erb
+++ b/app/views/visitors/features.html.erb
@@ -18,14 +18,13 @@
               <%= link_to "Home", "/" , :class =>"text-white"%><br>
               <%= link_to "Simple Application Pricing", "/static_pages" , :class =>"text-white"%><br>
               <%= link_to "Dynamic Applications and Information", "/tech_stack" , :class =>"text-white"%><br>
-              <p class="text-muted">  </p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
                 <li><a href="https://www.linkedin.com/in/damonhopkins" class="text-white">Linked-In</a></li>
                 <li><a href="https://www.github.com/oxygen545" class="text-white">Github</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="/contact" class="text-white">Send a Message</a></li>
               </ul>
             </div>
           </div>
@@ -33,8 +32,8 @@
       </div>
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
-            <strong>Simple Web Apps and Information</strong>
+          <a href=/static_pages" class="navbar-brand d-flex align-items-center">
+            <strong>Simple Web Apps and Information Pricing</strong>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">More &raquo;&nbsp;<span class="navbar-toggler-icon"></span>
           </button>
@@ -55,8 +54,8 @@
             <div class="container">
               <div class="carousel-caption text-left">
                 <h1>Basic Website Design</h1>
-                <p>Maybe you need more pizazz than a few simple static landing page. On this page I just used a templates and edited the HTML, CSS and Static pages to suite my needs</p>
-                <p><a class="btn btn-lg btn-primary" href="/static_pages" role="button">More Info</a></p>
+                <p>Maybe you need more pizazz than a few simple static landing page. On this page I just used a templates and edited the HTML, CSS and Static pages to suite my needs. But that's just the beginning</p>
+                <p><a class="btn btn-lg btn-primary" href="/dynamic_pages" role="button">Custom Applications</a></p>
               </div>
             </div>
           </div>
@@ -136,6 +135,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">Design&nbsp;&nbsp;<span class="text-muted">more than just a look</span></h2>
             <p class="lead">This is not a website built from a template where you enter your specific information and the website is built on the fly by a bunch of automated functions. What I do is work with you on the site design and come up with a plan to build it. Each site is an application built from the ground up based on your design and budget. Your site data is housed in a private custom database, you can host your own discussion forums, have as many email lists as you need, surveys, or what ever else you desire.The possibilites are virtually unlimited.</p>
+            <a href="/contact" class="btn btn-sm btn-secondary">Get Started</a>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.min.js/500x500/auto" alt="Generic placeholder image">
@@ -148,6 +148,7 @@
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">Building The Site&nbsp;&nbsp;<span class="text-muted">the longest phase of the process.</span></h2>
             <p class="lead">After the design is far enough along the development phase begins to take shape as I create the basics of the wireframed functional site. Once this is completed and the site functions as expected the layout, color and other style attributes are put into place and everything is tested to ensure it fucntions as intended and expected. Usually the site is deployed where the portions of the site that are not quite ready for public access are located in a private area until ready for actual live production use.</p>
+            <a href="/contact" class="btn btn-sm btn-secondary">Start your Project</a>
           </div>
           <div class="col-md-5 order-md-1">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.min.js/500x500/auto" alt="Generic placeholder image">
@@ -160,6 +161,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">Deployment&nbsp;<span class="text-muted">and Going "Live"</span></h2>
             <p class="lead">In deployment the website hostign server is prepared according to the needs of the site. the environment is configured for the expected traffic and proper credentials are put in place for the ability to use other cloud based services. The website is tested again to ensure that all functions are working as expected and the website renders correctly and when everything is done we celebrate the grand opening.</p>
+            <a href="/contact" class="btn btn-sm btn-secondary">Ready??</a>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.min.js/500x500/auto" alt="Generic placeholder image">
@@ -172,7 +174,7 @@
           <div class="col-md-7">
             <h2 class="featurette-heading">Support&nbsp;<span class="text-muted">and beyond</span></h2>
             <p class="lead">It doesn't end with the grand opening. There is still more to do. Over time the technology used to create and keep this and other website gets updated, changed, replaced and retired. I'll be here to help transition through those changes. Your Making sure your website remains relevant and functional for years to come. I'm here to do style changes as well. I'm here for your questions via email and phone. Want a new feature or chage made. That's what I'm here for</p>
-            <p> <a href="/contact" class="btn btn-sm btn-secondary">Contact Me</a></p>
+            <p><a href="/contact" class="btn btn-sm btn-secondary">Contact Me</a></p>
           </div>
           <div class="col-md-5">
             <img class="featurette-image img-fluid mx-auto" data-src="holder.min.js/500x500/auto" alt="Generic placeholder image">
