--- a/app/views/visitors/static_pages.html.erb
+++ b/app/views/visitors/static_pages.html.erb
@@ -23,7 +23,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <ul class="list-unstyled">
                 <li><a href="https://www.linkedin.com/in/damonhopkins" class="text-white">Linked-In</a></li>
                 <li><a href="https://www.github.com/oxygen545" class="text-white">Github</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="/contact" class="text-white">Send a Message</a></li>
               </ul>
             </div>
           </div>
@@ -31,7 +31,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
       <div class="navbar navbar-dark bg-dark box-shadow">
         <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
+          <a href="/static_pages" class="navbar-brand d-flex align-items-center">
             <strong>Static Application Pricing and Information</strong>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">More &raquo;&nbsp;<span class="navbar-toggler-icon"></span>
@@ -40,25 +40,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </header>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Pricing</h1>
-      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.</p>
+      <h1 class="display-4">Basic Website Pricing</h1>
+      <p class="lead">A simple and effective pricing table for you to see the options and choose a plan.</p>
     </div>
 
     <div class="container">
       <div class="card-deck mb-3 text-center">
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Free</h4>
+            <h4 class="my-0 font-weight-normal">Basic</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+            <h1 class="card-title pricing-card-title">$150 <small class="text-muted">+$25/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>10 users included</li>
-              <li>2 GB of storage</li>
-              <li>Email support</li>
-              <li>Help center access</li>
+              <li>Landing and Content pages with outbound links to social media or ecommerce locations</li>
+              <li>Cloud Storage and hosting options depending on your needs</li>
+              <li>Mailing Lists and Customer Feedback Messaging included</li>
+              <li>Priority Email Support</li>
+              <li>Administrative Dashboard Access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Basic</button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -66,14 +67,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h4 class="my-0 font-weight-normal">Pro</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
+            <h1 class="card-title pricing-card-title">$400 <small class="text-muted">+25/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>20 users included</li>
-              <li>10 GB of storage</li>
-              <li>Priority email support</li>
+              <li>Basic Site plus Blog</li>
+              <li>Everything included in the Basic package</li>
+              <li> Also - User Profiles, Comments, and a Blog for Announcements or Articles</li>
+              <li>Priority Email support and Voicemail Support</li>
+              <li>Administrative Dashboard Access</li>
               <li>Help center access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Pro</button>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
@@ -81,14 +84,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h4 class="my-0 font-weight-normal">Enterprise</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
+            <h1 class="card-title pricing-card-title">$1000+up <small class="text-muted">+25-50/ mo</small></h1>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>30 users included</li>
-              <li>15 GB of storage</li>
-              <li>Phone and email support</li>
-              <li>Help center access</li>
+              <li>Everything in the Pro and Basic packages included plus E-Commerce suite</li>
+              <li>Full E-Commerce integration with Payment processing directly on your site</li>
+              <li>Import your products or services from another location and host it here with full inventory and transaction tracking</li>
+              <li>Priority Phone and Email support</li>
+              <li>Help center access and Full Administrative Access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+            <button type="button" class="btn btn-lg btn-block btn-primary">Enterprise</button>
           </div>
         </div>
       </div>
