--- a/app/views/visitors/tech_stack.html.erb
+++ b/app/views/visitors/tech_stack.html.erb
@@ -24,7 +24,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <ul class="list-unstyled">
                 <li><a href="https://www.linkedin.com/in/damonhopkins" class="text-white">Linked-In</a></li>
                 <li><a href="https://www.github.com/oxygen545" class="text-white">Github</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="/contact" class="text-white">Send a Message</a></li>
               </ul>
             </div>
           </div>
