--- a/app/views/visitors/dynamic_pages.html.erb
+++ b/app/views/visitors/dynamic_pages.html.erb
@@ -14,16 +14,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-sm-8 col-md-7 py-4">
               <h4 class="text-white">Menu</h4>
               <%= link_to "Home", "/" , :class =>"text-white"%><br>
-              <%= link_to "Static Websites", "/features" , :class =>"text-white"%><br>
-              <%= link_to " Back to Dynamic Applications and Information", "/tech_stack" , :class =>"text-white"%><br>
-              <p class="text-muted"><a href="/users/sign_in" class="btn btn-sm btn-secondary">Members Users Only</a></p>
+              <%= link_to "Back to Dynamic Applications and Information", "/tech_stack" , :class =>"text-white"%><br>
+              <%= link_to " Back to Simple Web Apps and Information", "/features" , :class =>"text-white"%><br>
+              <p class="text-muted">  </p>
             </div>
             <div class="col-sm-4 offset-md-1 py-4">
               <h4 class="text-white">Contact</h4>
               <ul class="list-unstyled">
                 <li><a href="https://www.linkedin.com/in/damonhopkins" class="text-white">Linked-In</a></li>
                 <li><a href="https://www.github.com/oxygen545" class="text-white">Github</a></li>
-                <li><a href="#" class="text-white">Email me</a></li>
+                <li><a href="/contact" class="text-white">Send a Message</a></li>
               </ul>
             </div>
           </div>
@@ -40,59 +40,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     </header>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <h1 class="display-4">Pricing</h1>
-      <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It's built with default Bootstrap components and utilities with little customization.</p>
+      <h1 class="display-4">Dynamic Website Pricing</h1>
+      <p class="lead">For more complex systems the pricing table below can help you estimate which plan is necessary and the expected costs for some example scenarios.</p>
     </div>
 
     <div class="container">
       <div class="card-deck mb-3 text-center">
         <div class="card mb-4 box-shadow">
           <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Free</h4>
+            <h4 class="my-0 font-weight-normal">Custom Booking System</h4>
           </div>
           <div class="card-body">
-            <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
+            <h2 class="card-title pricing-card-title">$3-6k</h2>
+            <h5 class="text-muted">depending on options</h5>
             <ul class="list-unstyled mt-3 mb-4">
-              <li>10 users included</li>
-              <li>2 GB of storage</li>
-              <li>Email support</li>
-              <li>Help center access</li>
+              <li>A complex custom booking system similar to what AirBnB or an appointment system offers with scheduling and notifications, calendar integration, ecommerce processing, logging and analytics included.</li>
+              <li>Cloud Storage and hosting and storage options depending on your needs</li>
+              <li>Mailing Lists and Customer Feedback Messaging included</li>
+              <li>Priority Voice and Email Support</li>
+              <li>Administrative Dashboard Access</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>
-          </div>
-        </div>
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Pro</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>20 users included</li>
-              <li>10 GB of storage</li>
-              <li>Priority email support</li>
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Get started</button>
-          </div>
-        </div>
-        <div class="card mb-4 box-shadow">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Enterprise</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>30 users included</li>
-              <li>15 GB of storage</li>
-              <li>Phone and email support</li>
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Contact us</button>
+            <a href="/contact" ><button type="button" class="btn btn-lg btn-block btn-primary">Booking</button></a>
           </div>
         </div>
       </div>
-    <footer class="fixed-bottom text-white">
+    <footer class="text-white">
       <div class="container">
         <p class="float-left"><%= @site_title %> &copy; 2018</p>
         </div>
