--- a/app/views/visitors/portfolio.html.erb
+++ b/app/views/visitors/portfolio.html.erb
@@ -1,5 +1,6 @@
 	<% @pimages = Photo.where(page_name: "portfolio") %>
 	<% @card_1 = @pimages.find_by(sequence: 1) %>
+	<% @card_2 = @pimages.find_by(sequence: 2) %>
 </head>
 <body>
     <header>
@@ -62,7 +63,7 @@
             </div>
             <div class="col-xs-4">
               <div class="card mb-4 box-shadow">
-                <%= image_tag url_for(@card_1.image), :class => "card-img-top", :theme => "thumb", :alt => @card_1.caption %>
+                <%= image_tag url_for(@card_2.image), :class => "card-img-top", :theme => "thumb", :alt => @card_2.caption %>
                 <div class="card-body">
                   <p class="card-text" color="white">When I returned a few years later I worked on a large scale email branding service utilizing a custom built microsoft outlook api plug in to manipulate outgoing mail to ensure a consistant look and feel went out with each email. They are still using the same system I worked on from almost 10 years ago. Complete with the same home They appear to have stopped selling the <a href="http://www.lettermark.com/LetterMark-encryption-feature.htm" />Lettermark Encryption Plug-in for MS Outlook</a> I presume due to the fact that it is akin to hacking your own email. We had to catch the message before it sent but after the security checks and Microsoft tries to make the message secure. We also developed our own suite of portable applications and a stand alone encryption product as well. You can see those things and poke around in the support wiki and see more about what I did there. Many people worked to build the lettermark system but the portable security suite were mainly developed by myself and one other developer. The entire suite of applications were registered and updated via an Active-X plugin we built our own license applications and used the webupdate system to validate ownership of the device buy generating a device specific license file to prevent piracy or the software. It was pretty fancy for it's day. The order of events were to log-in pick your device from those our plugin detected. At the time 512 MB USB devices were all the rage. We sold quite a few. You can see some of my Letermark work still in the <a href="http://support.rtsz.com/mw/index.php?limit=100&tagfilter=&title=Special%3AContributions&contribs=user&target=dhopkins%40rtsz.com&namespace=&associated=1&year=&month=-1">logs</a> from a long time ago</p>
                   <div class="d-flex justify-content-between align-items-center">
