linked to portfolio not tech_stack

--- a/app/views/visitors/features.html.erb
+++ b/app/views/visitors/features.html.erb
@@ -76,7 +76,7 @@
               <div class="carousel-caption text-right">
                 <h1>Results matter</h1>
                 <p>Landing pages, forms, mailing lists, custom built interfaces to other web services google, facebook, twitter, etc. I've been building full featured applications from front to back since the mid 90's</p>
-                <p><a class="btn btn-lg btn-primary" href="/tech_stack" role="button">Past Projects</a></p>
+                <p><a class="btn btn-lg btn-primary" href="/portfolio" role="button">Portfolio</a></p>
               </div>
             </div>
           </div>
