--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,16 @@ but tonight I code..
 <!DOCTYPE html>
 <html lang=en>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-128630478-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-128630478-2');
+</script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -104,15 +114,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <%= javascript_include_tag "popper.min" %>
     <%= javascript_include_tag "bootstrap/bootstrap" %>
 
-    <!-- Global site tag (gtag.js) - Google Analytics damonhopkins.herokuapp.com -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128630478-2"></script>
-      <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-128630478-2');
-      </script>
 
   </body>
 </html>
