--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -52,4 +52,4 @@
       </div>
     <% end %>
   </div>
-  <%= link_to 'New Style', new_style_path %>
+  <div align="center" style="padding-top: 1rem; padding-bottom: 1rem;"><%= link_to 'New Style', new_style_path, :class=>"btn btn-success" %></div>
